Added the SoundCloud SDK JavaScript as a static, local resource.

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -191,7 +191,7 @@
       <script src="js/swipe_updown_events.js"></script>      
       <script src="js/angular/angular.js"></script>
       <script src="js/sm2/soundmanager2.js"></script>
-      <script src="//connect.soundcloud.com/sdk.js"></script>
+      <script src="js/soundcloud/sdk.js"></script>
       <script src="js/load.js"></script>
     </body>
 </html>
