Added splash page to site.

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -53,7 +53,12 @@
     </head>
     <body>
 
-      <main>        
+      <main>
+        <div id="splash" data-role="page" data-theme="a">
+          <div data-role="content" id="splash-content">
+            <div class="ir">SoundCloud Surfer</div>
+          </div>
+        </div>
         <div id="profile" data-role="page" data-theme="a">
           <div data-role="header" data-position="fixed" data-id="site-header">
             <h1>SoundCloud Surfer</h1>
