Temporarily removed the appcache manifest feature. Debugging this crap!

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--[if IEMobile 7 ]>    <html class="no-js iem7" lang="en" manifest="manifest.appcache"> <![endif]-->
-<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js" lang="en" manifest="manifest.appcache"> <!--<![endif]-->
+<!--[if IEMobile 7 ]>    <html class="no-js iem7" lang="en"> <![endif]-->
+<!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <title>SoundCloud Surfer</title>
