--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -195,7 +195,7 @@
       <script src="js/jquery/plugins/jquery.cookie.js"></script>
       <script src="js/swipe_updown_events.js"></script>      
       <script src="js/angular/angular.js"></script>
-      <script src="js/sm2/soundmanager2.js"></script>
+      <script src="js/sm2/script/soundmanager2.js"></script>
       <script src="js/soundcloud/sdk.js"></script>
       <script src="js/load.js"></script>
     </body>
