--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -66,7 +66,7 @@
           <div id="profile-page-content" data-role="content">
           
             <!-- This bit is managed using Angular -->
-            <article class="sound-cloud-profile" ng-app="ngView">
+            <article class="sound-cloud-profile" ng-app>
 						  <header>
 						    <hgroup>
 						      <h2 class="profile-avatar"><img ng-src="{{current_profile.avatar_url}}" alt=""></h2>
