Added custom jQuery Plugin named Restrain to have better control over the layout, flow, and what have you regarding the current track's tag list. All kinds of other fun stuff too!

--- a/BeatsPlayerTest/js/aarons-player/tpl/profile.html
+++ b/BeatsPlayerTest/js/aarons-player/tpl/profile.html
@@ -24,7 +24,7 @@
            of any track that may be playing already.
       -->
       <li ng-repeat="track in current_profile.tracks">
-        <a href="#" class="playable" data-track-id="{{track.id}}" title="{{track.title}}" data-ng-click="playTrack(track.id)">{{track.title}}</a>
+        <a href="#player-page" class="playable" data-track-id="{{track.id}}" title="{{track.title}}">{{track.title}}</a>
       </li>
     </ol>
   </section>
