Just 'cause, yo.

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -86,10 +86,10 @@
           </div>
           <div data-role="content">
             <ul id="current-track-meta-list" class="clearfix">
-	            <li><span id="track-title-icon" class="ir">Title</span><span id="track-title"></span></li>
-	            <li><span id="track-length-icon" class="ir">Length</span><span id="track-length"></span></li>
-	            <li><span id="track-genre-icon" class="ir">Genre</span><span id="track-genre"></span></li>
-	            <li><div id="track-tags-icon" class="ir">Tags</div><div id="track-tags"></div></li>
+	            <li class="indent-level-0"><span id="track-title-icon" class="ir">Title</span><span id="track-title"></span></li>
+	            <li class="indent-level-1"><span id="track-length-icon" class="ir">Length</span><span id="track-length"></span></li>
+	            <li class="indent-level-2"><span id="track-genre-icon" class="ir">Genre</span><span id="track-genre"></span></li>
+	            <li class="clearfix indent-level-3"><div id="track-tags-icon" class="ir">Tags</div><div id="track-tags"></div></li>
 	          </ul>
 	          
 	          <div id="audio-player-wrapper" class="clearfix"> 
