Added the custom Pulse jQuery plugin, and fixed all sorts of things.

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -109,7 +109,10 @@
 	              <a href="#" id="volume-button" class="nocallout" title="Adjust volume">
 	                <span id="volume-button-inner" class="ir">Volume</span>
 	              </a>
-	              <div id="audio-player-gutter">
+	              <div id="volume-controls" class="gutter">
+	                <div id="volume-scrubber"></div>
+	              </div>
+	              <div id="audio-player-gutter" class="gutter">
 	                <div id="audio-player-loaded-indicator"></div>
 	                <div id="audio-player-scrubber">&nbsp;</div>
 	              </div>
