Modified build.xml to upload to the new corefresh.aaronstephanus.com subdomain instead of a subdirectory on moveremus.com. Many CSS modifications, edits to index.html for whatever reason, lots of bug fixes in player.js, jquery.pulse.js.

--- a/BeatsPlayerTest/index.html
+++ b/BeatsPlayerTest/index.html
@@ -3,6 +3,7 @@
 <!--[if (gt IEMobile 7)|!(IEMobile)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Expires" content="0">
         <title>SoundCloud Surfer</title>
         <meta name="description" content="HTML5 Audio Player, and SoundCloud profile browser for Aaron Stephanus's application for employment with Beats Music.">
         <meta name="HandheldFriendly" content="True">
@@ -29,7 +30,7 @@
         <!-- For iOS web apps. Delete if not needed. https://github.com/h5bp/mobile-boilerplate/issues/94 -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-        <meta name="apple-mobile-web-app-title" content="(λx.x (BeatsMusic))(SoundCloud AudioPlayer)">
+        <meta name="apple-mobile-web-app-title" content="λx.x:((SoundCloud) =&gt; (Core Fresh))">
 
 
         <!-- This script prevents links from opening in Mobile Safari. https://gist.github.com/1042026 -->
@@ -139,7 +140,7 @@
       </main>
 
       <script src="js/jquery/plugins/jquery.cookie.js"></script>
-      <script src="js/jquery/plugins/jquery.restrain.js"></script>
+      <script src="js/jquery/plugins/jquery.pulse.js"></script>
       <script src="js/swipe_updown_events.js"></script>      
       <script src="js/angular/angular.js"></script>
       <script src="js/sm2/script/soundmanager2.js"></script>
