Lots of little bugs fixed. More to come. As always.

--- a/BeatsPlayerTest/js/aarons-player/pages/player.html
+++ b/BeatsPlayerTest/js/aarons-player/pages/player.html
@@ -3,6 +3,7 @@
   data-role="page" 
   data-theme="a"
   data-dom-cache="false"
+  data-url="/"
 >
   <div data-role="header" data-theme="a" data-position="fixed" data-fullscreen="true">
     <a href="#" id="back-home-link" data-role="button" data-icon="home">Back</a>
