--- a/BeatsPlayerTest/js/aarons-player/tpl/profile.html
+++ b/BeatsPlayerTest/js/aarons-player/tpl/profile.html
@@ -1,7 +1,8 @@
-<article class="sound-cloud-profile" data-ng-model="current_profile">
+<!-- This bit is managed using Angular -->
+<article class="sound-cloud-profile" ng-model="current_profile">
   <header>
     <hgroup>
-      <h2 class="profile-avatar"><img data-ng-src="{{current_profile.avatar_url}}" alt=""></h2>
+      <h2 class="profile-avatar"><img ng-src="{{current_profile.avatar_url}}" alt=""></h2>
       <h3 class="profile-fullname">{{current_profile.full_name}}</h3>
     </hgroup>
   </header>
@@ -22,7 +23,7 @@
            and begins playback of the selected track, first stopping playback
            of any track that may be playing already.
       -->
-      <li data-ng-repeat="track in current_profile.tracks">
+      <li ng-repeat="track in current_profile.tracks">
         <a href="#player-page" class="playable" data-track-id="{{track.id}}" title="{{track.title}}">{{track.title}}</a>
       </li>
     </ol>
@@ -37,14 +38,14 @@
           data-icon="forward"
           data-theme="b"
         >
-          <li data-ng-repeat="follower in current_profile.followers" class="profile-selector">
+          <li ng-repeat="follower in current_profile.followers">
             <a 
               href="#" 
               class="friend-profile-link" 
               title="{{follower.full_name}}"
               data-friend-id="{{follower.id}}"
             >
-              <img data-ng-src="{{follower.avatar_url}}" alt=""><strong>{{follower.full_name}}</strong>
+              <img ng-src="{{follower.avatar_url}}" alt=""><strong>{{follower.full_name}}</strong>
             </a>
           </li>
         </ul>
@@ -57,14 +58,14 @@
           data-icon="forward"
           data-theme="b"
         >
-          <li data-ng-repeat="following in current_profile.followings">
+          <li ng-repeat="following in current_profile.followings">
             <a 
               href="#"
               class="profile-selector"
               title="{{following.full_name}}"
               data-friend-id="{{following.id}}"
             >
-              <img data-ng-src="{{following.avatar_url}}" alt=""><strong>{{following.full_name}}</strong>
+              <img ng-src="{{following.avatar_url}}" alt=""><strong>{{following.full_name}}</strong>
             </a>
           </li>
         </ul>
