--- a/BeatsPlayerTest/js/aarons-player/pages/profile.html
+++ b/BeatsPlayerTest/js/aarons-player/pages/profile.html
@@ -1,8 +1,8 @@
-<div id="profile" data-role="page" data-theme="a" data-dom-cache="false" data-ng-app="ngView">
+<div id="profile" data-role="page" data-theme="a" data-dom-cache="false" ng-app="ngView">
   <div data-role="header" data-position="fixed" data-fullscreen="true">
     <h1>(λχ.χ):((SoundCloud) ⇒ (Core Fresh))</h1>
   </div>
-  <div id="profile-page-content" class="transparent" data-role="content" data-ng-view></div>
+  <div id="profile-page-content" class="transparent" data-role="content" ng-view></div>
   <div data-role="footer" data-position="fixed" data-fullscreen="true">
     (λχ.χ)(&copy; 2013 • (λζ.ζ)(Aaron L. Stephanus));
   </div>
